[metadata]
name = dpgext
version = 0.1.0
author = Marcus Vinicius Castelo Branco Martins
author_email = marcuscastelo@usp.br
description = DearPyGui extensions (widgets and windows)
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/marcuscastelo/test_pip
keywords = test package
license = MIT
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9.6
include_package_data = True
install_requires=
  dearpygui==1.5.0